--- a/index.html
+++ b/index.html
@@ -64,11 +64,21 @@
                 <h2 class="title-solutions visually-hidden">Strategy and technologies</h2>
                 <ul class="text-about list">
                     <li class="solutions-list">
+                        <div class="icon-image-list">
+                            <svg class="icon-img" width="64" height="64">
+                                <use href="./images/icons.svg/sprite.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="tittle-section sub-title-solutions">Strategy</h3>
                         <p class="text-section test-solutions">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="solutions-list">
+                        <div class="icon-image-list">
+                            <svg class="icon-img" width="64" height="64">
+                                <use href="./images/icons.svg/sprite.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="tittle-section sub-title-solutions">Punctuality</h3>
                         <p class="text-section test-solutions">Bring the key message to the brand's audience for the
                             best price
@@ -76,6 +86,11 @@
                             time.</p>
                     </li>
                     <li class="solutions-list">
+                        <div class="icon-image-list">
+                            <svg class="icon-img" width="64" height="64">
+                                <use href="./images/icons.svg/sprite.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="tittle-section sub-title-solutions">Diligence</h3>
                         <p class="text-section test-solutions">Research and confirm brands that present the strongest
                             digital
@@ -83,6 +98,11 @@
                             risk.</p>
                     </li>
                     <li class="solutions-list">
+                        <div class="icon-image-list">
+                            <svg class="icon-img" width="64" height="64">
+                                <use href="./images/icons.svg/sprite.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="tittle-section sub-title-solutions">Technologies</h3>
                         <p class="text-section test-solutions">Design practice focused on digital experiences. We bring
                             forth a
@@ -103,13 +123,75 @@
                         <div class="team-container">
                             <h3 class="tittle-section name-team">Mark Guerrero</h3>
                             <p class="text-section major-team">Product Designer</p>
+                            <ul class="social-media-list list">
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
+
+
                     </li>
                     <li class="team-list">
                         <img src="./images/foto2.jpg" alt="foto2" width="264" height="260" class="img-team">
                         <div class="team-container">
                             <h3 class="tittle-section name-team">Tom Ford</h3>
                             <p class="text-section major-team">Frontend Developer</p>
+                            <ul class="social-media-list list">
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list">
@@ -117,6 +199,30 @@
                         <div class="team-container">
                             <h3 class="tittle-section name-team">Camila Garcia</h3>
                             <p class="text-section major-team">Marketing</p>
+                            <ul class="social-media-list list">
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40" class="icon-media">
+                                            <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-sotial-media"><a href="">
+                                        <svg width="40" height="40" class="icon-media">
+                                            <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="icon-sotial-media"><a href="">
+                                        <svg width="40" height="40" class="icon-media">
+                                            <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="icon-sotial-media"><a href="">
+                                        <svg width="40" height="40" class="icon-media">
+                                            <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list">
@@ -124,6 +230,30 @@
                         <div class="team-container">
                             <h3 class="tittle-section name-team">Daniel Wilson</h3>
                             <p class="text-section major-team">UI Designer</p>
+                            <ul class="social-media-list list">
+                                <li class="icon-sotial-media">
+                                    <a href="">
+                                        <svg width="40" height="40" class="icon-media">
+                                            <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-sotial-media"><a href="">
+                                        <svg width="40" height="40" class="icon-media">
+                                            <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="icon-sotial-media"><a href="">
+                                        <svg width="40" height="40" class="icon-media">
+                                            <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="icon-sotial-media"><a href="">
+                                        <svg width="40" height="40" class="icon-media">
+                                            <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -143,16 +273,23 @@
                         </div>
                     </li>
                     <li class="image-portfolio">
-                        <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300">
+                        <div class="overlay-img">
+                            <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300">
+                            <div class="overlay">
+                                <p class="text-section overlay-marketing">14 Stylish and User-Friendly App Design
+                                    Concepts ·
+                                    Task
+                                    Manager App ·
+                                    Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
+                        </div>
                         <div class="app-description">
                             <h3 class="tittle-section title-portfolio">Cashless Payment</h3>
                             <p class="text-section">Marketing</p>
-                            <p class="text-section marketing">14 Stylish and User-Friendly App Design Concepts · Task
-                                Manager App ·
-                                Calorie Tracker App ·
-                                Exotic Fruit Ecommerce App ·
-                                Cloud Storage App</p>
                         </div>
+
                     </li>
                     <li class="image-portfolio">
                         <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300">
@@ -191,11 +328,41 @@
 
     <!--PAGE FOOTER-->
     <footer class="page-footer">
-        <div class="container">
-            <a class="logo-footer link" href="./index.html">Web<span class="web-logo">Studio</span></a>
-            <p class=" text-section text-section-footer">Increase the flow of customers and sales for your business with
-                digital marketing &
-                growth solutions.</p>
+        <div class="container container-footer">
+            <div>
+                <a class="logo-footer link" href="./index.html">Web<span class="web-logo">Studio</span></a>
+                <p class=" text-section text-section-footer">Increase the flow of customers and sales for your business
+                    with
+                    digital marketing &
+                    growth solutions.</p>
+            </div>
+            <div class="social-media-footer">
+                <p class="title-footer-social">Social media</p>
+                <ul class="social-media-list-footer list">
+                    <li class="icon-sotial-media ">
+                        <a href="">
+                            <svg width="40" height="40" class="icon-media">
+                                <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-sotial-media"><a href="">
+                            <svg width="40" height="40" class="icon-media">
+                                <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                    <li class="icon-sotial-media"><a href="">
+                            <svg width="40" height="40" class="icon-media">
+                                <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a></li>
+                    <li class="icon-sotial-media"><a href="">
+                            <svg width="40" height="40" class="icon-media">
+                                <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 
