--- a/index.html
+++ b/index.html
@@ -280,15 +280,13 @@
                     <li class="image-portfolio">
                         <div class="overlay-img">
                             <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300">
-                            <div class="overlay">
-                                <p class="text-section overlay-marketing">14 Stylish and User-Friendly App Design
-                                    Concepts ·
-                                    Task
-                                    Manager App ·
-                                    Calorie Tracker App ·
-                                    Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
+                            <p class="text-section overlay overlay-marketing">14 Stylish and User-Friendly App Design
+                                Concepts ·
+                                Task
+                                Manager App ·
+                                Calorie Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
                         </div>
                         <div class="app-description">
                             <h3 class="tittle-section title-portfolio">Banking App</h3>
@@ -298,15 +296,13 @@
                     <li class="image-portfolio">
                         <div class="overlay-img">
                             <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300">
-                            <div class="overlay">
-                                <p class="text-section overlay-marketing">14 Stylish and User-Friendly App Design
-                                    Concepts ·
-                                    Task
-                                    Manager App ·
-                                    Calorie Tracker App ·
-                                    Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
+                            <p class="text-section overlay overlay-marketing">14 Stylish and User-Friendly App Design
+                                Concepts ·
+                                Task
+                                Manager App ·
+                                Calorie Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
                         </div>
                         <div class="app-description">
                             <h3 class="tittle-section title-portfolio">Cashless Payment</h3>
@@ -317,15 +313,13 @@
                     <li class="image-portfolio">
                         <div class="overlay-img">
                             <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300">
-                            <div class="overlay">
-                                <p class="text-section overlay-marketing">14 Stylish and User-Friendly App Design
-                                    Concepts ·
-                                    Task
-                                    Manager App ·
-                                    Calorie Tracker App ·
-                                    Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
+                            <p class="text-section overlay overlay-marketing">14 Stylish and User-Friendly App Design
+                                Concepts ·
+                                Task
+                                Manager App ·
+                                Calorie Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
                         </div>
                         <div class="app-description">
                             <h3 class="tittle-section title-portfolio">Meditation App</h3>
@@ -335,15 +329,13 @@
                     <li class="image-portfolio">
                         <div class="overlay-img">
                             <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300">
-                            <div class="overlay">
-                                <p class="text-section overlay-marketing">14 Stylish and User-Friendly App Design
-                                    Concepts ·
-                                    Task
-                                    Manager App ·
-                                    Calorie Tracker App ·
-                                    Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
+                            <p class="text-section overlay overlay-marketing">14 Stylish and User-Friendly App Design
+                                Concepts ·
+                                Task
+                                Manager App ·
+                                Calorie Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
                         </div>
                         <div class="app-description">
                             <h3 class="tittle-section title-portfolio">Taxi Service</h3>
@@ -354,15 +346,13 @@
                         <div class="overlay-img">
                             <img src="./images/screen-Illustrations.jpg" alt="Screen Illustrations" width="360"
                                 height="300">
-                            <div class="overlay">
-                                <p class="text-section overlay-marketing">14 Stylish and User-Friendly App Design
-                                    Concepts ·
-                                    Task
-                                    Manager App ·
-                                    Calorie Tracker App ·
-                                    Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
+                            <p class="text-section overlay overlay-marketing">14 Stylish and User-Friendly App Design
+                                Concepts ·
+                                Task
+                                Manager App ·
+                                Calorie Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
                         </div>
                         <div class="app-description">
                             <h3 class="tittle-section title-portfolio">Screen Illustrations</h3>
@@ -372,15 +362,13 @@
                     <li class="image-portfolio">
                         <div class="overlay-img">
                             <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300">
-                            <div class="overlay">
-                                <p class="text-section overlay-marketing">14 Stylish and User-Friendly App Design
-                                    Concepts ·
-                                    Task
-                                    Manager App ·
-                                    Calorie Tracker App ·
-                                    Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
+                            <p class="text-section overlay overlay-marketing">14 Stylish and User-Friendly App Design
+                                Concepts ·
+                                Task
+                                Manager App ·
+                                Calorie Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
                         </div>
                         <div class="app-description">
                             <h3 class="tittle-section title-portfolio">Online Courses</h3>
