--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <li class="solutions-list">
                         <div class="icon-image-list">
                             <svg class="icon-img" width="64" height="64">
-                                <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="tittle-section sub-title-solutions">Strategy</h3>
@@ -76,7 +76,7 @@
                     <li class="solutions-list">
                         <div class="icon-image-list">
                             <svg class="icon-img" width="64" height="64">
-                                <use href="./images/icons/sprite.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="tittle-section sub-title-solutions">Punctuality</h3>
@@ -88,7 +88,7 @@
                     <li class="solutions-list">
                         <div class="icon-image-list">
                             <svg class="icon-img" width="64" height="64">
-                                <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="tittle-section sub-title-solutions">Diligence</h3>
@@ -100,7 +100,7 @@
                     <li class="solutions-list">
                         <div class="icon-image-list">
                             <svg class="icon-img" width="64" height="64">
-                                <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="tittle-section sub-title-solutions">Technologies</h3>
@@ -127,28 +127,28 @@
                                 <li class="icon-sotial-media">
                                     <a href="" class="icon-link-our-team">
                                         <svg width="16" height="16" class="icon-our-team">
-                                            <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
                                     <a href="" class="icon-link-our-team">
                                         <svg width="16" height="16" class="icon-our-team">
-                                            <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
                                     <a href="" class="icon-link-our-team">
                                         <svg width="16" height="16" class="icon-our-team">
-                                            <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
                                     <a href="" class="icon-link-our-team">
                                         <svg width="16" height="16" class="icon-our-team">
-                                            <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -164,30 +164,30 @@
                             <p class="text-section major-team">Frontend Developer</p>
                             <ul class="social-media-list list">
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -201,30 +201,30 @@
                             <p class="text-section major-team">Marketing</p>
                             <ul class="social-media-list list">
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -238,30 +238,30 @@
                             <p class="text-section major-team">UI Designer</p>
                             <ul class="social-media-list list">
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="icon-sotial-media">
-                                    <a href="">
-                                        <svg width="16" height="16">
-                                            <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                                    <a href="" class="icon-link-our-team">
+                                        <svg width="16" height="16" class="icon-our-team">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -272,7 +272,7 @@
             </div>
         </section>
 
-        <!--PORTFOLIO-->
+        <!--PORTFOLIO 4 -->
         <section class="page-portfolio">
             <div class="container">
                 <h2 class="tittle-team">Our Portfolio</h2>
@@ -397,28 +397,28 @@
                     <li class="icon-sotial-media">
                         <a href="" class="social-link-footer">
                             <svg width="24" height="24" class="icon-media">
-                                <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icon-sotial-media">
                         <a href="" class="social-link-footer">
                             <svg width="24" height="24" class="icon-media">
-                                <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icon-sotial-media">
                         <a href="" class="social-link-footer">
                             <svg width="24" height="24" class="icon-media">
-                                <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icon-sotial-media">
                         <a href="" class="social-link-footer">
                             <svg width="24" height="24" class="icon-media">
-                                <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
