--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
         </section>
 
-        <!--OUR TEAM-->
+        <!--OUR TEAM  3 -->
         <section class="page-team">
             <div class="container">
                 <h2 class="tittle-team">Our Team</h2>
