--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="team-container">
                             <h3 class="tittle-section name-team">Mark Guerrero</h3>
                             <p class="text-section major-team">Product Designer</p>
-                            <ul class="social-media-list list">
+                            <ul class="social-media-list  list">
                                 <li class="icon-sotial-media">
                                     <a href="" class="icon-link-our-team">
                                         <svg width="16" height="16" class="icon-our-team">
@@ -393,7 +393,7 @@
             </div>
             <div class="social-media-footer">
                 <p class="title-footer-social">Social media</p>
-                <ul class="social-media-list list">
+                <ul class="social-media-list-footer list">
                     <li class="icon-sotial-media">
                         <a href="" class="social-link-footer">
                             <svg width="24" height="24" class="icon-media">
