--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="./index.html" class="logo link">Web<span class="span-logo">Studio</span></a>
                 <ul class="menu list ">
                     <li class="menu-item link">
-                        <a href="./index.html" class="menu-link link">Studio</a>
+                        <a href="./index.html" class="menu-link link current">Studio</a>
                     </li>
                     <li class="menu-item link">
                         <a href="" class="menu-link link">Portfolio</a>
